<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_gender"
                android:textColor="@color/primaryTextColor"/>

            <CheckBox
                android:id="@+id/gender_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_gender_female" />

            <CheckBox
                android:id="@+id/gender_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_gender_male" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_status"
                android:textColor="@color/primaryTextColor"/>

            <RadioGroup
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_status_alive" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_status_dead" />

                <RadioButton
                    android:id="@+id/unknown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_status_unknown" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_last_update"
                android:textColor="@color/primaryTextColor"/>

            <Spinner
                android:id="@+id/last_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_id"
                android:textColor="@color/primaryTextColor"/>

            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/display_selected_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                android:text="@string/new_entry_display_btn" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>